--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -13,14 +13,19 @@ create-ssh-key-pair:
   script:
     - pwd
     - mkdir -p ~/.ssh
+
+  # key is genereated ONLY for ansible use
     - |
       #!/bin/bash
       FILE=~/.ssh/id_rsa
       if [ -f "$FILE" ]; then
           echo "$FILE exists."
       else 
+
           ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa 2>/dev/null <<< y >/dev/null
       fi
+
+  # to log into master node/minions, this key will be picked by terraform and place in each node
     - sudo echo $PUBLICKEYNEW > ~/.ssh/gitlabnew.pub
     - chmod 400 ~/.ssh/gitlabnew.pub
 
@@ -58,65 +63,57 @@ deploy:
   tags:
     - banuka-gcp
 
-restart-sshd:
-  stage: restart-sshd
-  script:
-    - pwd
-    - export ANSIBLE_HOST_KEY_CHECKING=False
-    - |
-      string="StrictHostKeyChecking no"
-      file=/etc/ssh/ssh_config
+# restart-sshd:
+#   stage: restart-sshd
+#   script:
+#     - pwd
+#     - export ANSIBLE_HOST_KEY_CHECKING=False
+#     - |
+#       string="StrictHostKeyChecking no"
+#       file=/etc/ssh/ssh_config
 
-      grep -qwi "$string$" "$file" && \
-      sed -i "s,\(^[^[:alnum:]]*\)\($string$\),\2,i" "$file" || \
-      sudo echo "$string" >> "$file"
+#       grep -qwi "$string$" "$file" && \
+#       sed -i "s,\(^[^[:alnum:]]*\)\($string$\),\2,i" "$file" || \
+#       sudo echo "$string" >> "$file"
 
-    - cat /etc/ssh/ssh_config
-    - cat /etc/ansible/hosts
-    - cd ~/.ssh
-    - service sshd restart
-    - ls
-  tags:
-    - banuka-gcp
+#     - cat /etc/ssh/ssh_config
+#     - cat /etc/ansible/hosts
+#     - cd ~/.ssh
+#     - service sshd restart
+#     - ls
+#   tags:
+#     - banuka-gcp
 
-test-ansible:
-  stage: test-ansible
-  retry:
-    max: 2
-    when:
-      - always
-  script:
-    - ansible -m ping all
-    - ls
-  when: delayed
-  start_in: 30 seconds
-  tags:
-    - banuka-gcp
+# test-ansible:
+#   stage: test-ansible
+#   retry:
+#     max: 2
+#     when:
+#       - always
+#   script:
+#     - ansible -m ping all
+#     - ls
+#   when: delayed
+#   start_in: 30 seconds
+#   tags:
+#     - banuka-gcp
 
-# ansible-commands:
-#   stage: ansible-commands
+
+# ansible-playbooks:
+#   stage: ansible-playbooks
+#   retry:
+#     max: 2
+#     when:
+#       - always
 #   script:
 #     - echo "ansible"
 #     - ansible-playbook ./ansible-playbooks/master_and_minions.yaml
 #     - ansible-playbook ./ansible-playbooks/master.yaml
+#     - ansible-playbook ./ansible-playbooks/join_master_and_hosts.yaml
+#   when: delayed
+#   start_in: 10 seconds
 #   tags:
 #     - banuka-gcp
-
-ansible-playbooks:
-  stage: ansible-playbooks
-  retry:
-    max: 2
-    when:
-      - always
-  script:
-    - echo "ansible"
-    - ansible-playbook ./ansible-playbooks/master_and_minions.yaml
-    - ansible-playbook ./ansible-playbooks/master.yaml
-    - ansible-playbook ./ansible-playbooks/join_master_and_hosts.yaml
-  when: delayed
-  start_in: 10 seconds
-  tags:
-    - banuka-gcp
 
 destroy:
   stage: destroy
