--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 image:
   name: 19950818/banu-terraform-ansible-cicd
+  entrypoint:
+    - '/usr/bin/ssh-keygen'
 
 stages:
   - create-ssh-key-pair
