--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ create-ssh-key-pair:
     - chmod 400 ~/.ssh/gitlabnew.pub
   artifacts:
     paths:
-      - /root/.ssh/id_rsa.pub
+      - id_rsa.pub
 
   tags:
     - gitlab-org
@@ -45,6 +45,7 @@ create-ssh-key-pair:
 prerequisites-install:
   stage: prerequisites-install
   script:
+    - cat id_rsa.pub
     - echo "hi"
     - yum update -y && yum install wget unzip -y
   tags:
