--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,9 +35,10 @@ create-ssh-key-pair:
     # to log into master node/minions, this key will be picked by terraform and place in each node
     - echo $PUBLICKEYNEW > ~/.ssh/gitlabnew.pub
     - chmod 400 ~/.ssh/gitlabnew.pub
+    - cp ~/.ssh/id_rsa.pub ${CI_PROJECT_DIR}
   artifacts:
     paths:
-      - ~/.ssh/id_rsa.pub
+      - ./id_rsa.pub
 
   tags:
     - gitlab-org
