--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,13 @@
 image:
-  name: 19950818/banu-terraform-ansible-cicd:v1.1
+  name: 19950818/banu-terraform-ansible-cicd:v1.3
 
 stages:
   - create-ssh-key-pair
-  - prerequisites-install
+  - Prerequisites
   - install-terraform
   - deploy
   - restart-sshd
-  - test-ansible
+  - Ansible
   - ansible-playbooks
   - destroy
 
@@ -44,7 +44,7 @@ create-ssh-key-pair:
     - gitlab-org
 
 prerequisites-install:
-  stage: prerequisites-install
+  stage: Prerequisites
   script:
     - cat id_rsa.pub
     - echo "hi"
@@ -53,7 +53,7 @@ prerequisites-install:
     - gitlab-org
 
 install_terraform:
-  stage: install-terraform
+  stage: Prerequisites
   script:
     - export VER="0.13.0-beta3"
     - wget https://releases.hashicorp.com/terraform/${VER}/terraform_${VER}_linux_amd64.zip
@@ -62,6 +62,8 @@ install_terraform:
     - pwd
     - rm -rf terraform_${VER}_linux_amd64.zip
     - which terraform
+  dependencies:
+    - prerequisites-install    
   tags:
     - gitlab-org
 
@@ -114,7 +116,7 @@ restart-sshd:
     - gitlab-org
 
 test-ansible:
-  stage: test-ansible
+  stage: Ansible
   retry:
     max: 2
     when:
@@ -128,7 +130,7 @@ test-ansible:
     - gitlab-org
 
 ansible-playbooks:
-  stage: ansible-playbooks
+  stage: Ansible
   retry:
     max: 2
     when:
@@ -140,6 +142,8 @@ ansible-playbooks:
     - ansible-playbook ./ansible-playbooks/join_master_and_hosts.yaml
   when: delayed
   start_in: 10 seconds
+  dependencies:
+    - test-ansible
   tags:
     - gitlab-org
 
