--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image:
 
 stages:
   - create-ssh-key-pair
-  - Prerequisites
+  - prerequisites
   - deploy
   - restart-sshd
   - Ansible
@@ -43,17 +43,17 @@ create-ssh-key-pair:
     - gitlab-org
 
 install-dependencies:
-  stage: Prerequisites
+  stage: prerequisites
   script:
     - cat id_rsa.pub
     - echo "hi"
     - yum update -y && yum install wget unzip -y
-  needs: []    
+  # needs: []    
   tags:
     - gitlab-org
 
 install_terraform:
-  stage: Prerequisites
+  stage: prerequisites
   script:
     - export VER="0.13.0-beta3"
     - wget https://releases.hashicorp.com/terraform/${VER}/terraform_${VER}_linux_amd64.zip
@@ -62,7 +62,7 @@ install_terraform:
     - pwd
     - rm -rf terraform_${VER}_linux_amd64.zip
     - which terraform
-  needs: ["install-dependencies"]    
+  # needs: ["install-dependencies"]    
   tags:
     - gitlab-org
 
