--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,8 @@ install_terraform:
     - pwd
     - rm -rf terraform_${VER}_linux_amd64.zip
     - which terraform
-  # needs: ["install-dependencies"]    
+  needs:
+    - install-dependencies    
   tags:
     - gitlab-org
 
@@ -141,7 +142,8 @@ ansible-playbooks:
     - ansible-playbook ./ansible-playbooks/join_master_and_hosts.yaml
   when: delayed
   start_in: 10 seconds
-  needs: ["test-ansible"]  
+  needs:
+    - test-ansible  
   tags:
     - gitlab-org
 
