--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ install_terraform:
     - pwd
     - rm -rf terraform_${VER}_linux_amd64.zip
     - which terraform
-  dependencies: []
+  dependencies: ["install-dependencies"]
   tags:
     - gitlab-org
 
@@ -141,7 +141,7 @@ ansible-playbooks:
     - ansible-playbook ./ansible-playbooks/join_master_and_hosts.yaml
   when: delayed
   start_in: 10 seconds
-  dependencies: []
+  dependencies: ["test-ansible"]
   tags:
     - gitlab-org
 
