--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,6 +115,7 @@ restart-sshd:
     # - cd ~/.ssh
     # - systemctl restart sshd
     - ls
+    - cat hosts
   tags:
     - gitlab-org
 
@@ -140,6 +141,7 @@ ansible-playbooks:
       - always
   script:
     - echo "ansible"
+    - cat hosts    
     - ansible-playbook -i hosts ./ansible-playbooks/master_and_minions.yaml
     - ansible-playbook -i hosts ./ansible-playbooks/master.yaml
     - ansible-playbook -i hosts ./ansible-playbooks/join_master_and_hosts.yaml
