--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,6 +142,7 @@ ansible-playbooks:
   script:
     - echo "ansible"
     - ls
+    - pwd
     - cat hosts    
     - ansible-playbook -i hosts ./ansible-playbooks/master_and_minions.yaml
     - ansible-playbook -i hosts ./ansible-playbooks/master.yaml
