--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ prerequisites-install:
 install_terraform:
   stage: install-terraform
   script:
-    - export VER="0.12.9"
+    - export VER="0.13.0-beta3"
     - wget https://releases.hashicorp.com/terraform/${VER}/terraform_${VER}_linux_amd64.zip
     - unzip terraform_${VER}_linux_amd64.zip
     # - sudo mv terraform /usr/local/bin/
